automation: add separate disk for /var/lib/lago
1.Add a secondary device for /var/lib/lago on the test VMs, as Lago
does not support extending the template disk.

2. Also renamed lago-init to 'lago-init.yaml'

Signed-off-by: Nadav Goldin <ngoldin@redhat.com>

--- a/automation/lago-init.yaml
+++ b/automation/lago-init.yaml
@@ -8,11 +8,20 @@ domains:
       - template_name: el7.3-base
         type: template
         name: root
-        dev: vda
+        dev: sda
+        format: qcow2
+      - comment: /var/lib/lago
+        size: 10G
+        type: empty
+        name: lib
+        dev: sdb
         format: qcow2
     artifacts:
       - /var/log
       - /home/custom_home/dummy_user/.lago/current/logs
+    metadata:
+      deploy-scripts:
+        - $LAGO_INITFILE_PATH/deploy.sh
 
   vm-fc24:
     memory: 2048
@@ -23,11 +32,20 @@ domains:
       - template_name: fc24-base
         type: template
         name: root
-        dev: vda
+        dev: sda
+        format: qcow2
+      - comment: /var/lib/lago
+        size: 10G
+        type: empty
+        name: lib
+        dev: sdb
         format: qcow2
     artifacts:
       - /var/log
       - /home/custom_home/dummy_user/.lago/current/logs
+    metadata:
+      deploy-scripts:
+        - $LAGO_INITFILE_PATH/deploy.sh
 nets:
   lago:
     type: nat
