--- a/automation/lago-init.yaml
+++ b/automation/lago-init.yaml
@@ -46,6 +46,30 @@ domains:
     metadata:
       deploy-scripts:
         - $LAGO_INITFILE_PATH/deploy.sh
+
+  vm-fc25:
+    memory: 2048
+    service_provider: systemd
+    nics:
+      - net: lago
+    disks:
+      - template_name: fc25-base
+        type: template
+        name: root
+        dev: sda
+        format: qcow2
+      - comment: /var/lib/lago
+        size: 10G
+        type: empty
+        name: lib
+        dev: sdb
+        format: qcow2
+    artifacts:
+      - /var/log
+      - /home/custom_home/dummy_user/.lago/current/logs
+    metadata:
+      deploy-scripts:
+        - $LAGO_INITFILE_PATH/deploy.sh
 nets:
   lago:
     type: nat
