tests: Use ansible
1. Migrate the tests to ansible.
   Each test suite is contained inside an ansible role.

2. There is no change in the functionality of the tests, except for
   the upgrade test.

3. The upgrade test creates an env with a stable version of lago, update
   lago to unstable, and then tries work with that env.

4. Dropped fc24 image from the tests.

5. Added fc25 and fc26 to the tests.

Signed-off-by: gbenhaim <galbh2@gmail.com>

--- a/automation/lago-init.yaml
+++ b/automation/lago-init.yaml
@@ -1,5 +1,5 @@
 domains:
-  vm-el74:
+  lago-vm-el74:
     memory: 2048
     service_provider: systemd
     nics:
@@ -23,13 +23,37 @@ domains:
       deploy-scripts:
         - $LAGO_INITFILE_PATH/deploy.sh
 
-  vm-fc24:
+  lago-vm-fc25:
     memory: 2048
     service_provider: systemd
     nics:
       - net: lago
     disks:
-      - template_name: fc24-base
+      - template_name: fc25-base
+        type: template
+        name: root
+        dev: sda
+        format: qcow2
+      - comment: /var/lib/lago
+        size: 10G
+        type: empty
+        name: lib
+        dev: sdb
+        format: qcow2
+    artifacts:
+      - /var/log
+      - /home/custom_home/dummy_user/.lago/current/logs
+    metadata:
+      deploy-scripts:
+        - $LAGO_INITFILE_PATH/deploy.sh
+
+  lago-vm-fc26:
+    memory: 2048
+    service_provider: systemd
+    nics:
+      - net: lago
+    disks:
+      - template_name: fc26-base
         type: template
         name: root
         dev: sda
