--- a/roles/lago_host/tasks/main.yaml
+++ b/roles/lago_host/tasks/main.yaml
@@ -1,3 +1,8 @@
+- name: Run system update
+  package:
+    name: '*'
+    state: latest
+
 - name: Make sure 'wheel' group exist
   group:
     name: wheel
