Use ansible ansible-2.6.1-1.el7
Also, when using the "script" Ansible module,
don't split the script and arguments into multiple lines,
because Ansible 2.6 fail to parse it correctly.

Signed-off-by: gbenhaim <galbh2@gmail.com>

--- a/roles/run_lago_env/tasks/main.yaml
+++ b/roles/run_lago_env/tasks/main.yaml
@@ -5,12 +5,7 @@
     mode: 0666
 
 - name: Run Lago env
-  script: >
-    run_env.sh
-      "{{ remote_init_dir }}"
-      init-nested
-      "{{ template_repo }}"
-      "{{ log_path }}"
+  script: run_env.sh "{{ remote_init_dir }}" init-nested "{{ template_repo }}" "{{ log_path }}"
   become: yes
   become_user: "{{ item }}"
   with_items:
