--- a/roles/lago_host/tasks/main.yaml
+++ b/roles/lago_host/tasks/main.yaml
@@ -1,7 +1,24 @@
+---
 - name: Run system update
   package:
     name: '*'
     state: latest
+
+- name: reboot host
+  shell: /sbin/shutdown -r +1m
+  async: 3
+  poll: 0
+  ignore_errors: true
+
+- name: Wait for ssh
+  wait_for:
+    port: 22
+    host: "{{ ansible_host }}"
+    search_regex: OpenSSH
+    delay: 30
+    timeout: 300
+  delegate_to: localhost
+  connection: local
 
 - name: Make sure 'wheel' group exist
   group:
